<resources>
    <string name="app_name">GazDetector</string>
    <string name="nav_header_title">Gaz Detector</string>
    <string name="nav_header_subtitle">email@address.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_tableau_bord">Tableau de Bord</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_capteur">Capteur</string>
    <string name="patern">/}\{/g</string>
    <string name="nominale">Nominale</string>
    <string name="hazard_lvl">Niveau de Danger :</string>
    <string name="plan_position">Position sur le plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>